[tool.poetry]
name = "llm-prueba"
version = "0.1.0"
description = ""
authors = ["jorge <jorge.nunez@ozonedrive.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
langchain = "^0.3.1"
openai = "^1.47.1"
anthropic = "^0.34.2"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
jupyter = "^1.1.1"
langchain-community = "^0.3.1"
langchain-openai = "^0.2.1"
langchain-chroma = "^0.1.4"
beautifulsoup4 = "^4.12.3"
nest-asyncio = "^1.6.0"
python-dotenv = "^1.0.1"
langchain-anthropic = "^0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
